[package]
name = "wireguard-conf"
description = "Generate Wireguard configs and interfaces with code"
keywords = ["wireguard", "amneziawg", "builder", "config"]

version = "0.4.0"
edition = "2021"

license = "MIT"
readme = "README.md"
homepage = "https://github.com/idkncc/wireguard-conf"
repository = "https://github.com/idkncc/wireguard-conf"

exclude = ["tests/", ".github/", "TODO.md", ".gitignore"]

[features]
amneziawg = []
serde = ["dep:serde", "either/serde", "ipnet/serde"]

[dependencies]
ipnet = "2"

# keys
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }
base64 = "0.22"
rand = { version = "0.9", features = ["small_rng"] }

# other
thiserror = "2.0"
either = "1"

# internal helpers
derive_builder = "0.20"
itertools = "0.14"

# serde feature
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_assert = "0.8"
claims = "0.8"
indoc = "2"

# Doc all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
